frontend/srcs/stylesheets/picture.css
@import url('https://fonts.googleapis.com/css?family=Arvo');
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");

body,
html {
	display: flex;
	justify-content: center;
	align-items: center;
	position: relative;
	width: 100%;
	height: 100%;
	margin: 0px;
	padding: 0px;
	background: #111;
	font-size: 13px;
	font-family: 'Arvo', monospace;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	width: 100%;
}

::-webkit-scrollbar {
	width: 0;
	height: 0;
	background: transparent;
}

/***************************************/
/*                 Photo               */
/***************************************/


#video {
	height: 550px;
	position: relative;
	display: block;
	width: 680px;
	object-fit:cover;
}

#photo {
	border: 1px solid black;
	box-shadow: 2px 2px 3px black;
	width: 520px;
	height: 440px;
}

#canvas {
	display: none;
}

.camera {
	width: 680px;
	height: 550px;
	display: inline-block;
	position: relative;
}

.placed-sticker {
    position: absolute !important;
    z-index: 10 !important;
    pointer-events: none !important;
	max-width: 128px;
	max-height: 128px;
}

.output {
	width: 340px;
	display: inline-block;
	vertical-align: top;
}

#startbutton {
	display: block;
	position: relative;
	margin-left: auto;
	margin-right: auto;
	height: 50px;
	width: 50px;
	border: solid 1px #D1C4E9;
	border-radius: 175px;
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
	bottom: 60px;
	background-color: rgb(255 255 255 / 50%);
	/*border: 1px solid rgb(255 255 255 / 70%);*/
	box-shadow: 0px 0px 1px 2px rgb(0 0 0 / 20%);
	font-size: 14px;
	font-family: "Lucida Grande", "Arial", sans-serif;
	color: rgb(255 255 255 / 100%);
}

#sendButton {
	width: 680px;
}

.contentarea {
	position: absolute;
	display: flex;
	justify-content: center;
	align-content: center;
	font-size: 16px;
	font-family: "Lucida Grande", "Arial", sans-serif;
	width: 100%;
}

.main-container {
	display: flex;
	flex-direction: column;
	gap: 20px;
	max-height: 80vh;
	padding: 20px;
}

.camera-section {
	display: flex;
	justify-content: center;
	flex: 1;  /* Prend tout l'espace disponible */
	min-width: 0; /* Évite le débordement */
}

.stickers-sidebar {
	width: 100%; /* Largeur fixe */
	overflow-y: auto; /* Scrollable si beaucoup de stickers */
	background-color: black;
	/* right:5%; */
	position: relative;
}

.content-title {
	grid-column: 1 / 3;
	text-align: center;
	font-size: xx-large;
	font-stretch: expanded;
	font-variant-caps: petite-caps;
	background: linear-gradient(to right,#FE4365,#C49CDE, #FC913A, #d36e9c, #d36e9c, #FE4265);
	-webkit-background-clip: text;
	background-clip: text;
	color: transparent;
	background-size: 500% 100%;
}

.stickers-grid {
	height: 150px;
	width:100%;
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(128px, 1fr));
	gap: 2em;
	padding: 1em;
	object-fit:contain;	
	background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
}

/* Responsive */
@media (max-width: 768px) {
	.container {
		flex-direction: column;
	}

	.stickers-sidebar {
		width: 100%;
		height: 200px; /* Hauteur fixe en mobile */
	}
}

